--- a/topoi.tex
+++ b/topoi.tex
@@ -332,4 +332,7 @@ Therefore $1_A$ is iso. Alternatively, we could say that since $1_A \circ 1_A
   \end{tikzcd}
   \end{center}
 \end{solution}
+
+\include{chapter4}
+
 \end{document}
